@@ -311,6 +311,9 @@
                                 <version>1.3.2</version>
                             </dependency>
                         </dependencies>
+                        <configuration>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
                     </plugin>
 
                     <plugin>
